apps/superset/01-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-postgres
  namespace: superset
spec:
  ports:
    - port: 5432
  selector:
    app: superset-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-postgres
  namespace: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-postgres
  template:
    metadata:
      labels:
        app: superset-postgres
    spec:
      containers:
        - name: postgres
          # Using bitnamilegacy as you discovered
          image: bitnamilegacy/postgresql:14 
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc-superset
