apps/superset/02-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-redis
  namespace: superset
spec:
  ports:
    - port: 6379
  selector:
    app: superset-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-redis
  namespace: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-redis
  template:
    metadata:
      labels:
        app: superset-redis
    spec:
      containers:
        - name: redis
          # Using bitnamilegacy as you discovered
          image: bitnamilegacy/redis:7.0
          ports:
            - containerPort: 6379
