apps/superset/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: superset
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "superset.pasuko.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset-web
                port:
                  name: http
